syntax = "proto3";

package todoPackage;

service Todo {
    rpc createTodo(TodoItem) returns (TodoItem);
    rpc getTodos(noParams) returns (TodoItemList);
}
 
message TodoItem {
    int32 id = 1;
    string title = 2;
}

message TodoItemList {
    repeated TodoItem todos = 1;
}

message noParams {}

